web-infras/parser/tests/fixtures/babel/es2017/async-functions/export-invalid/output.txt
[SyntaxError]: Missing semicolon or line terminator. (1,22)
1|export default async functionX () {}
 |                    ^
[SyntaxError]: Missing semicolon or line terminator. (1,35)
1|export default async functionX () {}
 |                                 ^
